package bookmyshow.entity;

public enum BookingState {
    COMPLETED,
    FAILED;
}
