package bookmyshow.entity;

public enum SeatType {
    PREMIUM,
    REGULAR,
    RECLINER;
}
