package bookmyshow.exception;

public class DuplicateShowException extends RuntimeException {
    public DuplicateShowException(String msg) {
        super(msg);
    }
}
