package bookmyshow.exception;

public class InvalidShowException extends RuntimeException {
    public InvalidShowException(String msg) {
        super(msg);
    }
}
